--- a/.travis.yml
+++ b/.travis.yml
@@ -2,10 +2,9 @@ language: go
 
 go:
 - 1.1
+- 1.2
 
-install:
-- go get github.com/axw/gocov/gocov
-- go get github.com/mattn/goveralls
+install: cat BUILD_DEPENDENCIES | xargs -I{} go get {}
 
 script: ../../../../bin/goveralls $GOVERALLS
 
