--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,11 @@
 language: go
 
 go:
-- 1.1
 - 1.2
 
 install: cat BUILD_DEPENDENCIES | xargs -I{} go get -v {}
 
-script: $HOME/gopath/bin/goveralls $GOVERALLS
+script: $HOME/gopath/bin/goveralls -v $GOVERALLS
 
 env:
   global:
